--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1{
     background: linear-gradient(to right, #fad84f, #acf687);
    text-align: center;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-   
+   font-size: 50px;
 }
 
 .container{
@@ -30,7 +30,7 @@ h1{
   font-optical-sizing:auto;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
-  
+  font-size: 50px;
  }
 
  .btn{
